--- a/pom.xml
+++ b/pom.xml
@@ -77,8 +77,8 @@
 	</dependencies>
 <distributionManagement>
   <snapshotRepository>
-    <id>snapshots</id>
-    <url>http://13.235.238.59:8081/nexus/content/repositories/snapshots</url>
+    <id>nex1</id>
+    <url>http://13.233.173.15:8081/nexus/content/repositories/nex1/</url>
   </snapshotRepository>
 </distributionManagement>
 	<build>
