--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.profiles.active=dev
 server.servlet.context-path=/inglibrary
 server.servlet.application-display-name=/inglibrary
 
-sonar.host.url=http://3.6.89.219/:9000
+sonar.host.url=http://3.6.89.219:9000
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
