--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -11,7 +11,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://3.6.89.219:3306/ingdb?autoReconnect=true&useSSL=false&allowPublicKeyRetrival=true
 
 spring.datasource.username=inguser1
-spring.datasource.password=H@ckath0n
+spring.datasource.password=Deepanshu@333
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
